# aphros-sim

./: README.md
1-flow_of_bubbles_working/: .gitignore  Makefile  std.conf
2-flow_of_bubbles/: std.conf
3-korali/: ._CMakeLists.txt  ._Makefile  .__model  .__model2  ._main.cpp  ._std.conf  .gitignore  CMakeLists.txt  Makefile  main.cpp  std.conf
3-korali/_model/: - CMakeLists.txt  ._- CMakeLists.txt  ._env.cpp  env.cpp
3-korali/_model2/: ._env.cpp  env.cpp
